@@ -1,3 +1,4 @@
+    - Ticket #216 - Bailador::Feature::AutoHead is in core and allways used
     - Ticket #194 - t/20-cli.t did not shut down processes properly
 
 0.0.8 2017.07.15
